force-app/main/default/objects/SPEN_ConfigurableSettings__c/SPEN_ConfigurableSettings__c.object-meta.xml
<CustomObject>
    <label>Configurable Settings</label>
    <nameField>
        <label>Configurable Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurable Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>