force-app/main/default/objects/SPEN_ConfigurableSettings__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>