force-app/main/default/objects/SPEN_ConfigurableSettings__c/fields/SPEN_Feature__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>