force-app/main/default/objects/SPEN_ConfigurableSettings__c/fields/SPEN_Value__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>