force-app/main/default/objects/SPEN_ConfigurableSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Feature__c</columns>
    <columns>SPEN_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>